--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+*** 20010701_4 by leeh
+- slight modification..
+
+
 *** 20010701_3 by greg
 Barring any (more) hugeass bugs floating our way........
 
