--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+*** 20010702_2 by leeh
+- 437 == ERR_UNAVAILRESOURCE (ill be using this later :P)
+
+
 *** 20010702_1 by leeh
 - fixed a core on a malford Q: line
 
