--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,147 @@
+*** 20010704_1 by jdc
+The Monster Update(tm) for hybrid-6 and cryptlinks.
+
+NOTE:  This apparently should work with hybrid-7, but it has one minor
+bug which I have yet to be able to figure out.  Other than that, the
+actual authentication seems to be working fine; there's got to be a
+missing line of code somewhere, or something not being initialised right;
+something like that.  An example of this problem (pentarou.parodius.com
+is hybrid-6 with this code):
+
+*** Connecting to 255.255.255.255[hybrid.best.net].9000
+*** Notice -- Link with hybrid.best.net[unknown@255.255.255.255] established: (TS ZIP QS EX CHW ENC:CAST/128,CAST/128) link
+*** Notice -- inflate() error(-3): unknown compression method
+*** Notice -- hybrid.best.net was connected for 1 seconds.  0/1 sendK/recvK.
+*** Notice -- Server hybrid.best.net split from pentarou.parodius.com
+
+It looks to me as if the connection is being terminated immediately after
+zlib kicks in.  The other end of the link (hybrid.best.net) shows one
+obvious error which should be the key to fixing this bug:
+
+*** Notice -- Unauthorized server connection attempt from pentarou.parodius.com: Invalid cipher
+
+Please note despite the zlib-style error, I ***STRONGLY*** doubt it has
+anything to do with zlib.  Either way, I'm submitting this because it's a
+_MUCH_ further along than before, and it actually does work except for the
+one small bug.  :-)  I believe the bug might be in s_serv.c somewhere
+(particularly with the "ENC:" stuff), but someone will have to go over all
+of this alongside me to figure out where the real bug is.  Once it's
+squashed, we're practically ready to go!
+
+- doc/cryptlink.txt
+    * Updated with the latest protocol information (same as hybrid-7s).
+
+- doc/example.conf
+    * Properly document how to use the new "," cipher pre-requisite in
+      the passwd field.
+
+- include/client.h
+    * Changed "ciphers" definition from char * to struct CipherDef *.
+
+- include/m_commands.h
+    * Removed definitons for m_cryptauth and m_cryptserv.
+    * Added definition for m_cryptlink.
+
+- include/msg.h
+    * Removed references to MSG_CRYPTAUTH and MSG_CRYPTSERV.
+    * Added reference to MSG_CRYPTLINK.
+
+- include/s_conf.h
+    * Added to ConfItem: rsa_public_keyfile definition (filename of keyfile).
+    * Added to ConfItem: struct CipherDef *cipher (pointer into Cipher[] for
+                         the per-conf definition of a cipher).
+
+- include/s_crypt.h
+    * Removed CRYPT_CIPHERNAMELENGTH.  Silly.
+    * Changed definition of CipherDef structure.  Moved from a typedef to
+      an actual struct.
+    * Changed extern definition for Ciphers[] table to be struct.  Goes
+      hand in hand with the above entry.
+    * Changed return type for crypt_selectcipher().  Now returns a pointer
+      to a CipherDef structure.
+    * Added function crypt_parse_conf().
+    * Cosmetical changes.
+
+- src/Makefile.in
+    * Removal of src/cryptauth.c and src/cryptserv.c.
+
+- src/channel.c
+    * --UNRELATED TO CRYPTLINKS--: Moved definition of register t2 to
+      ensure it only got used when it needed (due to -Wunused).
+
+- src/m_capab.c
+    * Removed "," delimited support across the wire for cipher autoneg.
+    * Changed methodology alongside "ENC:" comprehension during CAPAB.
+
+- src/m_cryptauth.c
+  src/m_cryptserv.c
+    * Both removed.  NOTE: I DO HAVE THESE LAYING AROUND IN A BACKUP
+                     SOURCE TREE!  For debugging the above bug, I figured
+                     we might need them!
+
+- src/m_cryptlink.c
+    * Added.
+    * Very simple to understand too; the functions are all practically
+      identical, so if you wrote this code, it should still make sense to
+      you.
+    * Like in -7, we now use a table for SERV and AUTH lookup.  Great for
+      expansion.
+
+- src/s_bsd.c
+    * Moved from "CRYPTSERV %s %s :%s" to "CRYPTLINK SERV ...".
+    * Cosmetical changes.
+
+- src/s_conf.c
+    * Initialised the new rsa_public_keyfile and cipher ConfItem entries.
+      Both default to NULL (as they should).
+    * Added MyFree() entry for rsa_public_keyfile.
+    * Added support for crypt_parse_conf() call during processing of C/N
+      line phase.
+    * Added log()s for bad C/N-line entries.
+    * Cosmetical changes and comments.
+
+- src/s_crypt.c
+    * Moved cipher names from things like "3DES" to "3DES/128".  This way,
+      code all over the place in other portions does not have to permutate
+      the actual keysize and the string using ircsprintf().  This was silly
+      in the first place, IMHO, since we already stored the keysize and the
+      strings both.
+    * crypt_selectcipher() re-written to go through the Ciphers[] table
+      a lot more effectively; goes alongside with the above entry too.
+    * Removed unnecessary free() of cptr->ciphers.  No need for this any
+      longer, since we just point right into the Ciphers[] table now.
+      Ain't this what pointers are for?  ;-)
+    * crypt_initserver() MAJORLY rehauled.  Tons of log() calls and new
+      error messages in the case there's a problem.  Re-written due to the
+      change from "char *ciphers" to "struct CipherDef *cipher".
+    * Changed errorhandling slightly, so that things would be more proper
+      ("if ... == NULL" vs. "if (!...)" in some cases).
+    * Added crypt_parse_conf().  This is the magic function which actually
+      parses the passwd entries in the C/N lines themselves and appropriate
+      splits up the fields, assigning them to rsa_public_keyfile and
+      cipher for ConfItem entries respectively.  I'm kind-of proud of this,
+      even though it may not look like much.  :-)  The reason is that we
+      were previously doing all of the parsing in crypt_initserver() -- a
+      silly idea!
+    * Cosmetical changes.
+
+- src/s_serv.c
+    * Moved away from printing all of the available ciphers we had during
+      the "ENC:" phase to simply printing the name of the one supported in
+      cptr.  This was a major bug anyways -- it printed ALL THE CIPHERS IN
+      THE TABLE, regardless if we actually supported them or not.  Ugh.
+    * No more "%s/%i,%s/%i" garbage (see first change entry above for
+      s_crypt.c).
+    * Cosmetical changes.
+
+- src/send.c
+    * --UNRELATED TO CRYPTLINKS--: Renamed "index" variable to "lindex,"
+      to keep from conflicting with system-wide function index() and
+      global variables.
+    * Cosmetical changes.
+
+
+
 *** 20010703_2 by wcampbel
 Backported the vimotd functionality from Hyb7's viconf.c
 Install the links to viconf (vimotd viklines)
