--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+*** 20010705_4 by wcampbel
+Updated the docs for greg's changed...
+
+
 *** 20010705_3 by db
 - added NO_HACK_OPS, don't allow users to hack ops on a channel period.
 
