--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+*** 20010708_3 by a1kmm
+- The first phase of adding KSERVER.
+
+
 *** 20010708_2 by a1kmm
 - Had better change the path in mkkeypair back...
 
