--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+*** 20010716_3 by leeh
+- dont show IPs in stats P either..
+
+
 *** 20010716_2 by leeh
 - this should be extended to ltrace/stats L.. 
 
