--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+*** 20010726_2 by leeh
+- added #define HIDE_ERROR_MESSAGES, as when we receive an error from a 
+  server, theyll sometimes send their IP along with it..
+
+
 *** 20010726_1 by leeh
 - backport from -7
   if someone squits *us*, use cptr->name, not cptr->host
