--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+*** 20010805_1 by leeh
+- removed some #if 0'd code that doesnt need to be there
+
+
 *** 20010804_2 by leeh
 - changed some defaults
 
