--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+*** 20011019_1 by db
+- ensure all va_end match up with va_start in send.c 
+  as pointed out by Aaron Campbell
+
+
+
 *** 20011017_1 by db
 - removed PACE_WALLOPS, this affects config.h m_info.h m_info.c
   m_wallops.c m_operwall.c 
