--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+*** 20011025_2 by db
+- fixed formatting in s_conf.c
+- removed obsfuscation in res.c
+
+
+
 *** 20011025_1 by leeh
 - as discussed on IRC.
 
