--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+*** 20011129_4 by db
+- minor formatting changes in s_conf.c
+  plus removed annoying "noise" 
+- stats r fix submitted by jv
+
+
+
 *** 20011129_3 by db
 - fixed order of STATS Q line
 
