--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+*** 20011129_5 by db
+- committed tobys undline/ungline patch
+
+
+
 *** 20011129_4 by db
 - minor formatting changes in s_conf.c
   plus removed annoying "noise" 
