--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+*** 20011129_8 by wcampbel
+Revise docs for the latest flurry of commits.  I still need more testing
+on a couple things, but it's pretty close
+
+
 *** 20011129_7 by db
 - Applied stats j patch
 
