--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+*** 20011203_4 by androsyn
+These are the changes to kill res.c dead.
+
+
+
 *** 20011203_3 by androsyn
 Added all the goodies for adns/
 
