--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+*** 20011204_6 by androsyn
+Oops..forgot a LIST_*
+
+
 *** 20011204_5 by androsyn
 Going to need libadns linked in to do something useful with that there
 fangled thing
