--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+*** 20011204_7 by db
+- I couldn't take the attach_Iline vs. attach_iline any more
+
+
+
 *** 20011204_6 by androsyn
 Oops..forgot a LIST_*
 
