--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+*** 20011206_1 by androsyn
+Fixed the /rehash dns core dump.
+
+
 *** 20011204_20 by androsyn
 Make configure stop checking for -lnsl as it is no longer needed..
 
