--- a/tools/README
+++ b/tools/README
@@ -1,13 +1,14 @@
-$Id: README,v 1.5 2001/07/10 12:40:38 jdc Exp $
+$Id: README,v 1.6 2001/12/08 01:59:19 wcampbel Exp $
 
 A directory of support programs for ircd.
 
+fixklines.c  - converts 192.168.0.* k-lines and d-lines into CIDR notation
 install_ircd - internal script used for make install
-ircd_start.c - start program for solaris
+ircd_start.c - start program for Solaris
 klineParse.c - cleans out redundant klines
 mkconf       - a simple but effective script to edit ircd.conf lines
-mkpasswd     - makes password for O lines
-start_ircd.c - start program for fbsd and bsd/os systems
+mkpasswd     - makes password for O: lines
+start_ircd.c - start program for FreeBSD and BSD/OS systems
 untabify     - a script used by the developers
 viconf       - edit your conf file without having to chdir su etc. etc.
                also locks the file if file locking is used.
