--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+lusky       2002/04/15 18:40:01 EDT	(20020415_1)
+
+  Modified files:
+    .                    ChangeLog 
+  Log:
+  add greets to ohm in last commit
+  
+  Revision  Changes    Path
+  1.604     +1 -1      ircd-hybrid-6/ChangeLog
+
+
+
 lusky       2002/04/15 18:38:25 EDT	(20020415_0)
 
   Modified files:
