--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+ievil       2003/06/17 21:43:57 EDT	(20030618_1)
+
+  ircd-hybrid-6/doc/ircd.conf - New directory
+
+
+
 ievil       2003/06/17 20:58:19 EDT	(20030618_0)
 
   Modified files:
