- merely fixed a few obvious typos.

--- a/doc/ircd.conf/README
+++ b/doc/ircd.conf/README
@@ -3,7 +3,7 @@ Files description of
 doc/ircd.conf/
 
 
-I still remember setting up my first ircd-hybrid irc server and remeber
+I still remember setting up my first ircd-hybrid irc server and remember
 the feeling when I opened the example.conf and was overwhelmed by all the
 info there. Over the years I've had several versions of this file and when
 Nick Parrin and I set up our test net for this release of ircd-hybrid-6 (6.4) 
@@ -19,7 +19,7 @@ thing. It's just a help to get started.
 
 Files:
 
-ircd.conf      -   The main ircd.conf which trough .include statements 
+ircd.conf      -   The main ircd.conf which through .include statements 
                    load the rest of the configuration file.
 ilines.conf    -   This file controls the I-lines or access lines.
 ispoof.conf    -   Spoofed i-lines
@@ -37,4 +37,4 @@ Take care and enjoy ircd-hybrid-6.
 
 Arnvid Karstad - ievil@isd.no
 
-$Id: README,v 1.1 2003/06/18 01:49:01 ievil Exp $
+$Id: README,v 1.2 2004/03/09 02:38:15 db Exp $
