--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+lusky       2004/03/18 00:32:47 EST	(20040318_2)
+
+  Modified files:
+    .                    RELNOTES 
+  Log:
+  Updated RELNOTES for 6.4.2rc1, better late than never.
+  
+  Revision  Changes    Path
+  1.21      +11 -0     ircd-hybrid-6/RELNOTES
+
+
+
 ievil       2004/03/17 21:56:39 EST	(20040318_1)
 
   Modified files:
