--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+ievil       2004/04/08 21:12:28 EDT	(20040409_1)
+
+  ircd-hybrid-6/contrib - New directory
+
+
+
 ievil       2004/04/08 21:07:47 EDT	(20040409_0)
 
   Modified files:
