--- a/doc/ircd.8
+++ b/doc/ircd.8
@@ -1,4 +1,5 @@
 .\" @(#)ircd.8 6.1 5 June 2001
+.\" $Id: ircd.8,v 1.5 2004/12/06 04:03:19 lusky Exp $
 .TH IRCD 8 "ircd-hybrid-6.1 5 June 2001"
 .SH NAME
 ircd \- The Internet Relay Chat Program Server 
@@ -104,7 +105,7 @@ None... ;-) if somebody finds one, please inform the author
 .SH AUTHOR
 irc2.8 and earlier: Jarkko Oikarinen, currently jto@tolsun.oulu.fi.
 .LP
-ircd-hybrid-6: IRCD-Hybrid Project, ircd-hybrid@the-project.org.
+ircd-hybrid-6: IRCD-Hybrid Project, bugs@ircd-hybrid.org.
 .LP
 manual page written by Jeff Trim, jtrim@orion.cair.du.edu,
 later modified by jto@tolsun.oulu.fi.
