--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,17 @@
+ievil       2005/09/30 12:10:49 EDT	(20050930_2)
+
+  Removed files:
+    include              whowas.h 
+    src                  whowas.c 
+  Log:
+  Removing old named files
+  
+  Revision  Changes    Path
+  1.7       +0 -114    ircd-hybrid-6/include/whowas.h (dead)
+  1.35      +0 -288    ircd-hybrid-6/src/whowas.c (dead)
+
+
+
 ievil       2005/09/30 12:08:20 EDT	(20050930_1)
 
   Added files:
